Fix operation text alignment

--- a/src/components/CreateAccount.scss
+++ b/src/components/CreateAccount.scss
@@ -66,6 +66,7 @@
                     margin-top: 0.2em;
                     margin-bottom: 0.2em;
                     margin-left: 0;
+                    font-weight: 400;
                 }
 
                 .currency {
@@ -76,9 +77,6 @@
                     background-color: transparent;
                     border-top: 1px solid white;
                     border-bottom: 1px solid white;
-
-                    text-align: center;
-                    font-weight: 500;
                 }
 
                 .amount {
@@ -90,9 +88,6 @@
 
                     border-top: 1px solid beige;
                     border-bottom: 1px solid beige;
-
-                    text-align: end;
-                    font-weight: 400;
                 }
             }
         }
