--- a/src/components/Transfer.scss
+++ b/src/components/Transfer.scss
@@ -76,8 +76,7 @@
                     background-color: transparent;
                     border-top: 1px solid white;
                     border-bottom: 1px solid white;
-
-                    text-align: center;
+                    
                     font-weight: 500;
                 }
 
@@ -91,7 +90,6 @@
                     border-top: 1px solid beige;
                     border-bottom: 1px solid beige;
 
-                    text-align: end;
                     font-weight: 400;
                 }
             }
