--- a/src/components/UpdateKey.scss
+++ b/src/components/UpdateKey.scss
@@ -184,9 +184,7 @@
 
                     .currency,
                     .amount {
-                        text-align: start;
                         display: inline-block;
-                        text-align: start;
 
                         padding: 0.2em;
                         margin-left: 0;
@@ -200,8 +198,6 @@
                         background-color: transparent;
                         border-top: 1px solid white;
                         border-bottom: 1px solid white;
-
-                        text-align: center;
 
                         color: white;
                     }
